--- a/portfolio.html
+++ b/portfolio.html
@@ -113,8 +113,8 @@
 
                       <div class="row">
                         <ul class="btn col s2 m2 l2 offset-l3 offset-m3 offset-s3 brown">
-                        <a class="btn btn-info" href="https://github.com/miritalakhani/News-Scrape-using-Mongo" target="_blank">Code</a>
-                        <a class="btn btn-info" href="https://miritalakhani.github.io/News-Scrape-using-Mongo/" target="_blank">Demo</a>
+                        <a class="btn btn-info" href="https://github.com/miritalakhani/NYTScraper" target="_blank">Code</a>
+                        <a class="btn btn-info" href="https://morning-dawn-13772.herokuapp.com/" target="_blank">Demo</a>
                         </ul>
                       </div>
 
