--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
               <h1 class="about-me-header">About Me</h1>
               <hr class="about-me-hr"/>
               <img src="assets/imgs/profile.jpg" alt="" id="nate-image"/>
-              <p>I am highly motivated and sharp professional with a solid Engineering background and a very optimistic view of a data driven future, I am highly interested in applying for the Sr. QA position with Thougtwave Software and Solutions Inc.</p>                
-              <p> 
-              Thank you very much for your time. I have attached my updated resume for your review. I look forward to discussing exciting career opportunity further with you.</p>
+              <p>I am highly motivated professional with an engineering background and I have an optimistic view of a data driven future. I am passionate about learning new technologies.</p> 
+              <p>I have learned and applied HTML, CSS, JavaScript, Bootstrap, JQuery, Node.js, Express, React, MongoDB and SQL Server in various projects as part of a coding bootcamp.</p>                          
+              <p> In my career experience I worked in many areas of Quality Assurance including Mobile Application, Website, API and Responsive Design validation.</p>
               <br />  
 
 
