update pic size

--- a/portfolio.html
+++ b/portfolio.html
@@ -108,8 +108,8 @@
                 <div class=" col  s12 l5 m5 offset-l1 offset-m1">
                 <div class="aboutProject">
                   <div class="project-title"><strong>News-Scrape-using-Mongo</strong></div>
-                  <img src="assets/imgs/burger.png" class="responsive-img" width="40%"/>
-                  <!-- <img src="assets/imgs/scrap.png" class="responsive-img" width="66%" /> -->
+                  <!-- <img src="assets/imgs/burger.png" class="responsive-img" width="40%"/> -->
+                  <img src="assets/imgs/scrap.png" class="responsive-img" width="40%" />
       
 
                       <div class="row">
